src/test/test-models/good/model/independent_gaussian.stan
parameters {
  vector[2] x;
}

model {
  x ~ normal(0.0, 1.0);
}
