src/test/test-models/bad/signature_sampling_unknown.stan
data {
  vector[4] x;
}
parameters {
  vector[4] theta;
}
model {
  x ~ foo_whatev(theta);
}
